# android-gym

./: .gitignore  pyproject.toml  tox.ini
android_gym/: __init__.py
android_gym/envs/: __init__.py  base_env.py  legged_robot.py  legged_robot_config.py
android_gym/envs/chape/: chape.py  chape_env.yaml  chape_sim.yaml
android_gym/envs/chape/assets/: darwin.urdf
android_gym/envs/chape/assets/meshes/chape/: body.dae  head.dae  left_ankle.dae  left_arm_lower.dae  left_arm_upper.dae  left_foot.dae  left_pelvis.dae  left_pelvis_y.dae  left_shoulder.dae  left_thigh.dae  left_tibia.dae  neck.dae  right_ankle.dae  right_arm_lower.dae  right_arm_upper.dae  right_foot.dae  right_pelvis.dae  right_pelvis_y.dae  right_shoulder.dae  right_thigh.dae  right_tibia.dae
android_gym/parser/: __init__.py  agent.py  env.py  sim.py
android_gym/scripts/: play.py  train.py
android_gym/utils/: __init__.py  helpers.py  math.py  task_registry.py
tests/: resources.py  test_parser.py
